Fixed header z-index

--- a/styles/scss/index.scss
+++ b/styles/scss/index.scss
@@ -28,6 +28,7 @@ header {
     margin-top: 20px;
     background-color: $max-blue-green;
     text-align: center;
+    z-index: 100;
 }
 
 .content-container {
